# csdl_fwh

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: Main_Input_VLM.txt  Main_Input_monopole.txt  ex_1_vlm.py  ex_2_analytic.py
examples/aero_data/: sample_panel_code_acoustics_data2
examples/aero_data/Monopole_Dipole/: FWH_surfi.py  Garrick_Triangle.py  Generator_1_Analytic_Solution.py  Generator_2_Numerical_Solution.py  Source_Input.txt  Time_Derivative_1D.py  rms.py
src/csdl_fwh/: CSDL_FWH.py  __init__.py
src/csdl_fwh/core/: CSDL_FFT_Module.py  CSDL_Garrick_Triangle.py  CSDL_Interp_vF2.py  CSDL_Switch2.py  CSDL_Time_Derivative.py  FFT.py
